
      \item \code{citation()} supports inst/CITATION files from package
      source trees, with \code{lib.loc} pointing to the directory
      containing the package.

      %% Would need more work (notably in  ../src/main/sort.c )
      %% \item New \code{orderL(lst, ....)} for use in \code{do.call()} to
      %% avoid the name problem seen in \PR{17119}.

      \item \code{try()} gets a new argument \code{outFile} with a default
      that can be modified via \code{options(try.outFile = .)}, useful
      notably for \code{Sweave}.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item There are new entry points \code{R_MakeExternalPtrFn} and
      \code{R_ExternalPtrFn} to facilitate creating and retrieving an
      \R{} external pointer from a C function pointer without ISO C
      warnings about the conversion of function pointers.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item \code{readline} headers (and not just the library) are
      required unless configuring with \option{--with-readline=no}.

      \item \command{configure} now adds a compiler switch for C++11
      code, even if the compiler supports C++11 by default.  (This
      ensures that \command{g++} 6.x uses C++11 mode and not its default
      mode of C++14 with \sQuote{GNU extensions}.)

      The tests for C++11 compliance are now much more comprehensive.

      \item \command{configure} now tests for a C++14-compliant compiler
      by testing some basic features.  This by default tries flags for
      the compiler specified by \samp{CXX}, but an alternative compiler,
      options and standard can be specified by variables \samp{CXX1Y},
      \samp{CXX1YFLAGS} and \samp{CXX1YSTD} (e.g., \option{-std=gnu++14}).

      \item There is a new macro \code{CXXSTD} to help specify the
      standard for C++ code, e.g.\sspace{}\option{-std=c++98}.  This
      makes it easier to work with compilers which default to a later