@@ -89,7 +89,7 @@ processID <- function(process) {
               domain = NA)
 }
 
-# unused
+# unused in the package
 sendChildStdin <- function(child, what)
 {
     if (inherits(child, "process") || is.list(child)) child <- processID(child)
