@@ -1,6 +1,6 @@
 % File src/library/parallel/man/parallel-package.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 2011 R Core Team
+% Copyright 2011-2016 R Core Team
 % Distributed under GPL 2 or later
 
 \name{parallel-package}
@@ -14,18 +14,19 @@
   Support for parallel computation, including random-number generation.
 }
 \details{
-  This package is under development: a first version was released with
-  \R 2.14.0.
+  This package was first included with \R 2.14.0 in 2011.
 
   There is support for multiple RNG streams with the
   \samp{"L'Ecuyer-CMRG"} \link{RNG}: see \code{\link{nextRNGStream}}.
 
   It contains functionality derived from and pretty much equivalent to
-  that contained in packages \CRANpkg{multicore} (with some low-level
-  functions renamed and not exported) and \CRANpkg{snow} (for socket
-  clusters only, but MPI and NWS clusters generated by
-  \CRANpkg{snow} are also supported).  This package also provides
-  \code{\link{makeForkCluster}}.
+  that contained in packages \pkg{multicore} (formerly on
+  \acronym{CRAN}, with some low-level functions renamed and not
+  exported) and \CRANpkg{snow} (for socket clusters only, but MPI and
+  NWS clusters generated by \CRANpkg{snow} are also supported). There
+  have been many enhancements and bug fixes since 2011.
+
+  This package also provides \code{\link{makeForkCluster}}.
 
   For a complete list of exported functions, use
   \code{library(help = "parallel")}.
