@@ -1,6 +1,6 @@
 % File src/library/parallel/man/unix/mcparallel.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 2009-2014 R Core Team
+% Copyright 2009-2016 R Core Team
 % Distributed under GPL 2 or later
 
 \name{mcparallel}
@@ -118,18 +118,18 @@ mccollect(jobs, wait = TRUE, timeout = 0, intermediate = FALSE)
 }
 
 \note{
-  Package \CRANpkg{multicore} also exported functions \code{collect} and
-  \code{parallel}.  These names are easily masked (for example package
-  \CRANpkg{lattice} also has a function \code{parallel}) and they are not
-  supplied in this package.
+    Prior to \R 3.4.0 and on a 32-bit platform, the \link{serialize}d
+  result from each forked process is limited to \eqn{2^{31} - 1}{2^31 -
+    1} bytes.  (Returning very large results via serialization is
+  inefficient and should be avoided.)
 }
 
 
 \author{
   Simon Urbanek and R Core.
 
-  Derived from the \CRANpkg{multicore} package (but with different
-  handling of the RNG stream).
+  Derived from the \pkg{multicore} package formerly on
+  \acronym{CRAN}. (but with different handling of the RNG stream).
 }
 \seealso{
   \code{\link{pvec}}, \code{\link{mclapply}}
